# MobileFineTuner

./: .gitattributes  .gitignore  .gitmodules  README.md
.github/workflows/: operator-ci.yml
android-visualizer/: .gitignore  README.md  gradle.properties  lint.xml  settings.gradle.kts
android-visualizer/app/: build.gradle.kts  proguard-rules.pro
android-visualizer/mft-sdk/: build.gradle.kts  consumer-rules.pro
android-visualizer/mft-sdk/src/main/cpp/: CMakeLists.txt  mobile_finetuner_jni.cpp
android-visualizer/sdk-sample/: build.gradle.kts
docs/: ANDROID_SDK.md  ARCHITECTURE.md  MODEL_ASSETS.md  PUBLIC_API.md
examples/gemma_3_1b_pt_lora_finetune/: CMakeLists.txt  prepare_data.py  run_eval.sh  run_prepare_data.sh  run_train.sh
examples/gemma_3_270m_lora_finetune/: CMakeLists.txt  prepare_data.py  run_eval.sh  run_prepare_data.sh  run_train.sh
examples/gpt2_medium_lora_finetune/: CMakeLists.txt  prepare_data.py  run_eval.sh  run_prepare_data.sh  run_train.sh
examples/gpt2_small_lora_finetune/: CMakeLists.txt  prepare_data.py  run_eval.sh  run_train.sh  (+1 more)
gemma_3_1b_pt_lora_finetune/: CMakeLists.txt  README.md  prepare_data.py  run_eval.sh  run_prepare_data.sh  run_train.sh
gemma_3_1b_pt_lora_finetune/src/: eval_mmlu_gemma.cpp  main.cpp
gemma_3_270m_lora_finetune/: CMakeLists.txt  README.md  prepare_data.py  run_eval.sh  run_prepare_data.sh  run_train.sh
gpt2_medium_lora_finetune/: CMakeLists.txt  README.md  prepare_data.py  run_eval.sh  run_prepare_data.sh  run_train.sh
gpt2_medium_lora_finetune/src/: eval_mmlu.cpp  main.cpp
gpt2_medium_lora_finetune/src/mmlu/: mmlu_runner.cpp  mmlu_runner.h
gpt2_small_lora_finetune/: CMakeLists.txt  README.md  build.sh  prepare_data.py  run_eval.sh  run_prepare_data.sh  run_train.sh
operator/: CMakeLists.txt  CODE_AUDIT_REPORT.md  MEMORY_OPTIMIZATION_GUIDE.md
operator/cmake/: MobileFineTunerConfig.cmake.in  OperatorsConfig.cmake.in
operator/finetune_ops/core/: autograd_engine.cpp  backward_functions.cpp  backward_functions.cpp.bak  backward_functions.h  dtype.h  lm_loss.cpp  lm_loss.h  logger.h  memory_efficient_attention.cpp  memory_efficient_attention.h  memory_manager.cpp  ops.cpp  ops.cpp.bak  ops.h  performance_monitor.cpp  performance_monitor.h  step_arena.cpp  step_arena.h  tensor.cpp  tensor.h  test_apply_rope_layout.cpp  test_autograd_leaf_accum.cpp  test_dtype_mixed_precision.cpp  test_memory_efficient_attention_grad.cpp  test_selected_token_lm_loss.cpp  test_tensor_slice.cpp  test_tokenizer_factory.cpp  test_tokenizer_gemma.cpp  test_tokenizer_hf_golden.cpp  tokenizer.cpp  tokenizer.h  tokenizer_bpe.cpp  tokenizer_bpe.h  utils.cpp
operator/finetune_ops/data/: mmlu_dataset.cpp  mmlu_dataset.h  test_jsonl_mask_alignment.cpp  wikitext2_dataset.cpp  wikitext2_dataset.h
operator/finetune_ops/graph/: CMakeLists.txt  auto_model.cpp  auto_model.h  gemma_lora_injector.cpp  gemma_model.cpp  gemma_model.h  gpt2_model.cpp  gpt2_model.h  lora_injector.cpp  lora_injector.h  lora_saver.cpp  lora_saver.h  model_registry.cpp  model_registry.h  qwen_model.cpp  qwen_model.h  safetensors_loader.cpp  safetensors_loader.h  save_pt_gold.py  test_auto_model.cpp  test_gemma_config.cpp  test_gemma_forward.cpp  test_gemma_lora_roundtrip.cpp  test_lora_roundtrip.cpp  test_model_registry.cpp
operator/finetune_ops/graph/testdata/: README.md
operator/finetune_ops/legacy/: README.md
operator/finetune_ops/legacy/nn/: attention.cpp  attention.h  layers.h  lora_ops.cpp  lora_ops.h  mlp.cpp  mlp.h  module.h
operator/finetune_ops/memory/: arena_allocator.h
operator/finetune_ops/nn/: embedding.h  lora_linear.cpp  lora_linear.h  test_lora_linear.cpp
operator/finetune_ops/optim/: adam.cpp  auto_trainer.cpp  auto_trainer.h  gemma_trainer.cpp  gemma_trainer.h  smoke_utils.h  test_attention_single_layer_backward.cpp  test_gpt2_lora_two_step_smoke.cpp  test_qkt_softmax_grad.cpp  test_repeat_kv_softmax_grad.cpp  test_rmsnorm_unit.cpp  test_train_minimal.cpp  train_lora_gemma.cpp  train_lora_gpt2.cpp  trainer.cpp  trainer.h
operator/finetune_ops/transformer/: LEGACY_README.md
operator/include/mobile_finetuner/: mobile_finetuner.h
operator/opt_ops/activations/: activation_checkpointer.h  activation_compressor.cpp  activation_deepspeed_optimizations.h  activation_partitioning.h  activation_storage.h  activation_system_integration.h  deepspeed_checkpoint_integration.cpp  deepspeed_checkpoint_integration.h  mobile_activation_manager.h  mobile_efficient_attention.h
operator/opt_ops/config/: mobile_config_presets.h
operator/opt_ops/core_ext/: chunked_softmax_ce.cpp  chunked_softmax_ce.h  memory_first_attention.cpp  memory_first_attention.h  memory_first_mlp.cpp  memory_first_mlp.h  mobile_safe_matmul.cpp  mobile_safe_matmul.h
operator/opt_ops/memory/: arena_allocator.h  gradient_buffer.h  memory_governor.h
operator/opt_ops/optim/: adam_amp.cpp  adam_amp.h  mobile_optimizer_advanced.cpp  mobile_optimizer_advanced.h  mobile_optimizer_extensions.cpp  mobile_optimizer_extensions.h  mobile_optimizer_state_manager.cpp  mobile_optimizer_state_manager.h  optimizer_utils.h  param_manager_lite.h
operator/opt_ops/parameter/: activation_checkpointer.cpp  arena_allocator.cpp  arena_allocator.h  gradient_buffer.cpp  gradient_buffer.h  memory_governor.cpp  memory_governor.h  mobile_activation_manager.cpp  mobile_param_manager.cpp  mobile_param_manager.h  mobile_param_optimizations.cpp  mobile_param_optimizations.h  mobile_specific_optimizations.cpp  mobile_specific_optimizations.h  mobile_zero.cpp  mobile_zero.h  simple_tensor_stub.cpp
operator/opt_ops/utils/: fp16_utils.h  grad_scaler.h  memory_ledger.h  mobile_memory_tracker.cpp  mobile_memory_tracker.h
operator/scripts/: generate_gemma_golden.py
qwen_lora_finetune/: CMakeLists.txt  build.sh  run_mmlu.sh  run_qnli.sh  run_wikitext.sh
scripts/: README.md  asset_paths.py  check_local_assets.sh  check_release_tree.sh  generate_tokenizer_hf_golden_fixtures.py  prepare_arcc_jsonl.py  prepare_mcq_jsonl.py  prepare_qnli_jsonl.py  run_training_real_assets.sh  run_training_smoke.sh
(+57 files in other folders)
